[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_mikacc"
version = "0.0.1"
authors = [
  { name="Mika", email="mikacchang@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License version 3"
]

[project.urls]
Homepage = "https://github.com/Mika-Chang/pypi_tutorial.git"
Issues = "https://github.com/Mika-Chang/pypi_tutorial.git/issues"
